# ebreakfast

./: README.md  docker-compose.yml
app/: Dockerfile  app.py  requirements.txt  script.sh  solara.py
app/module/: database.py  models.py  models_main.py  routes.py
app/templates/: add.html  delete.html  error.html  index.html
app/ui/: Procfile  pyproject.toml
app/ui/ui/: __init__.py  basket.py  data.py
app/ui/ui/components/: checkout.py  layout.py  order.py
app/ui/ui/content/menus/: burger.md  coffee.md  omelette.md  pancake.md  pizza.md  toast.md
app/ui/ui/models/: models.py
app/ui/ui/pages/: __init__.py
app/ui/ui/pages/admin/: __init__.py
app/ui/ui/pages/checkout/: __init__.py
app/ui/ui/pages/order/: __init__.py
database/: auto.cnf  ca-key.pem  ca.pem  client-cert.pem  client-key.pem  ib_buffer_pool  private_key.pem  public_key.pem  server-cert.pem  server-key.pem
database/ebreakfast_db/: addresses.frm  addresses.ibd  admins.ibd  creditcards.ibd  customers.frm  customers.ibd  meals.frm  meals.ibd  merchants.frm  merchants.ibd  ordermeals.ibd  orders.ibd  paymentmethods.frm  paymentmethods.ibd  restaurants.frm  restaurants.ibd
database/mysql/: columns_priv.MYI  db.MYI  engine_cost.ibd  event.MYI  func.MYI  innodb_index_stats.ibd  innodb_table_stats.ibd  ndb_binlog_index.MYI  proc.MYD  proc.MYI  procs_priv.MYI  proxies_priv.MYI  server_cost.ibd  (+4 more)
mysqldata/: auto.cnf  ca-key.pem  ca.pem  client-cert.pem  client-key.pem  ib_buffer_pool  private_key.pem  public_key.pem  server-cert.pem  server-key.pem
sql/: data.sql  deinit.sql  init.sql
(+235 files in other folders)
